[package]
name = "blckchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "blckchain"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"